--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "chatgpt.openOnStartup": true
+    "chatgpt.openOnStartup": true,
+    "kiroAgent.trustedCommands": [
+        "python *",
+        "Get-ChildItem *",
+        "python -c \"import pandas as pd; df = pd.read_excel('output/sales_analysis_item_sales_detail_wk_41w_20251008_170004.xlsx'); print('Columns:', df.columns.tolist()); print('\\nFirst 3 rows:'); print(df.head(3)); print('\\nData types:'); print(df.dtypes)\"",
+        "git *"
+    ]
 }
