feat(dashboard): integrate Product Summary sheet for product analytics
Update Sales Dashboard to read from 'Product Summary' sheet generated by
analyze_sales_data.py instead of raw transaction data. This provides
pre-aggregated product-level metrics for better performance.

BREAKING CHANGE: Dashboard now requires Excel files with 'Product Summary'
sheet containing Product_Name, Sales_Amount, and Sales_Qty columns.

Changes:
- Add SHEET_NAME config to specify 'Product Summary' sheet
- Update required columns: Product_Name, Sales_Amount, Sales_Qty
- Modify data loader to read from specific sheet
- Simplify metrics calculator (remove aggregation logic)
- Update chart displays to use Product_Name column
- Improve dashboard layout (sidebar title, side-by-side charts)
- Filter weekly charts to Monday-Friday only
- Move success messages to sidebar

Benefits:
- Faster loading with pre-aggregated data
- Consistent with CLI tool output format
- Simpler calculation logic
- Better performance with smaller datasets

Limitations:
- Weekly trend charts non-functional (no date data in Product Summary)
- No time-series analysis capability

Files modified:
- src/quickbooks_autoreport/dashboard/config.py
- src/quickbooks_autoreport/dashboard/data_loader.py
- src/quickbooks_autoreport/dashboard/metrics.py
- src/quickbooks_autoreport/dashboard/metrics_display.py
- src/quickbooks_autoreport/dashboard/charts_display.py
- src/quickbooks_autoreport/dashboard/sidebar.py
- apps/dashboard/Home.py

Documentation:
- DASHBOARD_PRODUCT_SUMMARY_UPDATE.md
- CHANGELOG.md

Refs: #dashboard #product-summary #analytics

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,17 @@ TEST_MODE=false
 
 # Enable verbose logging for debugging
 DEBUG_MODE=false
+
+# Dashboard Configuration
+# Directory where dashboard reads Excel files from
+DASHBOARD_OUTPUT_DIR=output
+
+# Polling interval for automatic file refresh (in seconds)
+# Default: 3600 (1 hour)
+DASHBOARD_POLL_INTERVAL=3600
+
+# Maximum file size for dashboard processing (in MB)
+DASHBOARD_MAX_FILE_SIZE_MB=10
+
+# Number of top products to display in charts
+DASHBOARD_TOP_N_PRODUCTS=5
